force-app/main/default/objects/custom_create21__c/custom_create21__c.object-meta.xml
<CustomObject>
    <label>Custom created object21</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects21</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>