force-app/main/default/objects/custom_create21__c/fields/custom_create_21field544__c.field-meta.xml
<CustomField>
    <fullName>custom_create_21field544__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 21field544</label>
    <type>Checkbox</type>
</CustomField>