force-app/main/default/objects/custom_create21__c/fields/custom_create_21field591__c.field-meta.xml
<CustomField>
    <fullName>custom_create_21field591__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 21field591</label>
    <type>Checkbox</type>
</CustomField>